--- a/RunMap/RunMap/Base.lproj/Main.storyboard
+++ b/RunMap/RunMap/Base.lproj/Main.storyboard
@@ -56,6 +56,7 @@
                     </view>
                     <connections>
                         <outlet property="mapView" destination="QZB-gt-7cP" id="kdT-TR-dVj"/>
+                        <outlet property="startButton" destination="CaC-H0-Eof" id="Jor-QI-p2s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
